NEWS for hht

2.0-1
The EEMD function now uses a Gaussian noise time series by default.
Originally it used a uniform random noise distribution.
This original functionality is still available by setting noise.type = "uniform."

2.0-2
Fixed a bug that threw errors with large arrays were initialized.

2.1.1 
Added the Complete Ensemble Empirical Mode Decomposition (CEEMD) algorithm

2.1.2
Added appropriate citation

2.1.3
Put an option to not plot and just return image matrix for FTGramImage and HHGramImage.
Added the option to ensure that the residue of EMD has at most one extremum, default is to enable this option.
Fixed error that sometimes occurs in FTGramImage because of a mismatch of y axes of spectrograms