@@ -18,3 +18,4 @@ Added appropriate citation
 Put an option to not plot and just return image matrix for FTGramImage and HHGramImage.
 Added the option to ensure that the residue of EMD has at most one extremum, default is to enable this option.
 Fixed error that sometimes occurs in FTGramImage because of a mismatch of y axes of spectrograms
+Added detrend option to EvolutiveFFT, it is enabled by default in FTGramImage
